--- a/helloWord/src/Todo.css
+++ b/helloWord/src/Todo.css
@@ -1,3 +1,14 @@
+body{
+    margin: 0;
+    padding: 25px 40px 25px 40px;
+    flex-direction: column;
+}
+
+.add{
+   text-align: center;
+}
+
 h1{
     text-align: center;
 }
+
