--- a/helloWord/src/Todo.css
+++ b/helloWord/src/Todo.css
@@ -6,9 +6,75 @@ body{
 
 .add{
    text-align: center;
+  
+}
+
+/*Modificação para a barra */
+input{
+    width: 50%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 2px solid rgb(0, 0, 0);
+  border-radius: 10px;
+  box-shadow: 0 0 20px rgb(52, 48, 48);
+}
+
+/* Modificação no botão adicionar*/
+.btn{
+  background: #f0f0f0;
+  font-size: 15px;
+  font-family:fantasy ;
+  height:45px;
+  padding: 12px 20px;
+  margin: 8px 0;
+  border-radius: 10px;
+  border: 2px solid #000;
+  box-shadow: 0 0 20px rgb(52, 48, 48);
+ 
 }
 
 h1{
     text-align: center;
+    
 }
 
+.barra{
+    background: #393939f0 ;
+    
+}
+
+
+h1{
+    text-align: center;
+    color: #f0f0f0;
+    background-color: #3c3b3b;
+   
+}
+
+h2{
+    text-align: center;
+    font-size: 30px;
+}
+
+ul{
+    list-style:upper-roman;
+    border: 2px solid #000;
+    border-radius: 10px;
+}
+
+/* Modificação no botão remover*/
+button{
+    background: #f0f0f0;
+    font-size: 15px;
+    font-family:fantasy ;
+    height:45px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    border-radius: 10px;
+    border: 2px solid #000;
+}
+
+p{
+    font-size: 20px;
+}
