--- a/helloWord/src/Todo.css
+++ b/helloWord/src/Todo.css
@@ -6,10 +6,10 @@ body{
 
 .add{
    text-align: center;
-  
+
 }
 
-/*Modificação para a barra */
+/*Modificação para as barras */
 input{
     width: 50%;
   padding: 12px 20px;
@@ -22,7 +22,7 @@ input{
 
 /* Modificação no botão adicionar*/
 .btn{
-  background: #f0f0f0;
+  background: #000000;
   font-size: 15px;
   font-family:fantasy ;
   height:45px;
@@ -54,22 +54,28 @@ h2{
     font-size: 30px;
 }
 
+h3{
+    font-size: 25px;
+}
+
 ul{
     list-style:none;
-    border: 2px solid #000;
+    border: 2px solid #000000;
     border-radius: 10px;
+  
 }
 
 /* Modificação no botão remover*/
 button{
-    background: #f0f0f0;
+    color: #f0f0f0;
+    background: #000000;
     font-size: 15px;
     font-family:fantasy ;
     height:45px;
     padding: 12px 20px;
     margin: 8px 0;
     border-radius: 10px;
-    border: 2px solid #000;
+    border: 2px solid #ff0000;
 }
 
 p{
@@ -77,7 +83,7 @@ p{
 }
 
 .img{
-    border: 1px solid #000000;
+   
     width: 450px;
     height: 455px;
     
